--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>goit_homework_1</title>
 </head>
 <body>
-    Hello world
+    <header></header>
+    <main>
+       Hello world git is connected!
+    </main> 
+    <footer>
+
+    </footer>
 </body>
 </html>
