--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <header></header>
     <main>
-       Hello world git is connected!
+      <div class="main__container">
+        <h1>Hello world</h1>  
+        <p>git is connected!</p>
+      </div>
+        <aside>
+        
+        </aside>
     </main> 
+
     <footer>
 
     </footer>
