Add nav and styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>goit_homework_1</title>
 </head>
 <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>HW 1</li>
+          <li>HW 2</li>
+          <li>HW 3</li>
+          <li>HW 4</li>
+          <li>HW 5</li>
+          <li>HW 6</li>
+          <li>HW 7</li>
+          <li>HW 8</li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <div class="main__container">
         <h1>Hello world</h1>  
