--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li>HW 1</li>
+          <li><a href="https://kostyabrig.github.io/goit_homework_1/">HW 1</a></li>
           <li>HW 2</li>
           <li>HW 3</li>
           <li>HW 4</li>
