Creating Studio HW Structure

--- a/index.html
+++ b/index.html
@@ -4,36 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>goit_homework_1</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Студія</title>
 </head>
 <body>
     <header>
       <nav>
+        <a href="#"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="https://kostyabrig.github.io/goit_homework_1/">HW 1</a></li>
-          <li>HW 2</li>
-          <li>HW 3</li>
-          <li>HW 4</li>
-          <li>HW 5</li>
-          <li>HW 6</li>
-          <li>HW 7</li>
-          <li>HW 8</li>
+          <li><a href="#">Студія</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-      <div class="main__container">
-        <h1>Hello world</h1>  
-        <p>git is connected!</p>
-      </div>
-        <aside>
-        
-        </aside>
+    <!--Hero Section -->
+    <section class="hero">
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="submit">Замовити послугу</button>
+    </section>
+    <!-- Features -->
+    <section class="features">
+      <ul>
+        <li>
+          <p class="features_title">Увага до деталей</p>
+          <p class="features_text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      </li>
+        <li>
+          <p class="features_title">Пунктуальність</p>
+          <p class="features_text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
+        <li>
+          <p class="features_title">Планування</p>
+          <p class="features_text">Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <p class="features_title">Сучасні технології</p>
+          <p class="features_text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+    </section>
+    <!-- What We Do -->
+    <section class="whatwedo">
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li><img src="/images/whatwedo_box_1.jpg" alt="Working with tablet and computer" width="370" height="294"></li>
+        <li><img src="/images/whatwedo_box_2.jpg" alt="Testing mobile app" width="370" height="294"></li>
+        <li><img src="/images/whatwedo_box_3.jpg" alt="Working with with color palette on iPad" width="370" height="294"></li>
+      </ul>
+    </section>
+    <!-- Crew -->
+    <section class="crew">
+      <h2>Наша команда</h2>
+      <ul class="crew_blox">
+        <li class="crew_blox_block">
+          <img src="./images/crew_igor.jpg" alt="Ігор Дем'яненко - Product Designer">
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li class="crew_blox_block">
+          <img src="./images/crew_olga.jpg" alt="Ольга Рєпіна - Frontend Developer">
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li class="crew_blox_block">
+          <img src="./images/crew_mykola.jpg" alt="Микола Тарасов - Marketing">
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li class="crew_blox_block">
+          <img src="./images/crew_mykhailo.jpg" alt="Михайло Єрмаков - UI Designer">
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
     </main> 
-
     <footer>
-
+      <a href="#"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
 </body>
 </html>
