--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <section class="whatwedo">
       <h2>Чим ми займаємося</h2>
       <ul>
-        <li><img src="/images/whatwedo_box_1.jpg" alt="Working with tablet and computer" width="370" height="294"></li>
-        <li><img src="/images/whatwedo_box_2.jpg" alt="Testing mobile app" width="370" height="294"></li>
-        <li><img src="/images/whatwedo_box_3.jpg" alt="Working with with color palette on iPad" width="370" height="294"></li>
+        <li><img src="./images/whatwedo_box_1.jpg" alt="Working with tablet and computer" width="370" height="294"></li>
+        <li><img src="./images/whatwedo_box_2.jpg" alt="Testing mobile app" width="370" height="294"></li>
+        <li><img src="./images/whatwedo_box_3.jpg" alt="Working with with color palette on iPad" width="370" height="294"></li>
       </ul>
     </section>
     <!-- Crew -->
