--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
       <!-- Features -->
       <section class="features">
-        <h2>Наші особливості</h2>
+        <h2 hidden>Наші особливості</h2>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
