--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +26,7 @@
       <!--Hero Section -->
       <section class="hero">
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="submit">Замовити послугу</button>
+        <button type="button">Замовити послугу</button>
       </section>
       <!-- Features -->
       <section class="features">
@@ -142,7 +142,7 @@
       <a href="#"><span>Web</span>Studio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="#">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
